{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 165,
  "lineage": "5a9ed77e-bed5-9691-2dbc-843dea8c1a1a",
  "resources": [
    {
      "module": "module.common_k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "ecfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/ecfront-service",
            "metadata": [
              {
                "generation": 0,
                "name": "ecfront-service",
                "namespace": "default",
                "resource_version": "52193",
                "uid": "93fdd160-d69f-40dc-8b6c-eb7c2241b969"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.210.89",
                "cluster_ips": [
                  "10.102.210.89"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "ecfront"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.local.kubernetes_cluster_role.nginx_ingress",
            "module.local.kubernetes_cluster_role_binding.nginx_ingress",
            "module.local.kubernetes_config_map.nginx_configuration",
            "module.local.kubernetes_deployment.nginx_ingress_controller",
            "module.local.kubernetes_ingress_class_v1.nginx",
            "module.local.kubernetes_ingress_v1.ecfront",
            "module.local.kubernetes_namespace.ingress_nginx",
            "module.local.kubernetes_persistent_volume.local",
            "module.local.kubernetes_persistent_volume_claim.local",
            "module.local.kubernetes_pod.local",
            "module.local.kubernetes_service.nginx_ingress",
            "module.local.kubernetes_service_account.nginx_ingress"
          ]
        }
      ]
    },
    {
      "module": "module.local",
      "mode": "managed",
      "type": "kubernetes_ingress_class_v1",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginx",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 0,
                "labels": null,
                "name": "nginx",
                "resource_version": "",
                "uid": ""
              }
            ],
            "spec": [
              {
                "controller": "k8s.io/ingress-nginx",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.local",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ecfront",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/ecfront-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "ecfront-ingress",
                "namespace": "default",
                "resource_version": "52090",
                "uid": "4ffba307-3fd8-4844-901c-31e44943ccab"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "localhost",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "ecfront-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.local",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "52092",
                "uid": "a4343d92-98ed-4cf0-b09e-3f2334377f9a"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "module": "module.local",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "ingress-nginx/nginx-ingress",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-ingress",
                "namespace": "ingress-nginx",
                "resource_version": "52115",
                "uid": "1e072733-18ec-4019-992f-03432750e9cd"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.21.81",
                "cluster_ips": [
                  "10.110.21.81"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31607,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "https",
                    "node_port": 32568,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "nginx-ingress"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "localhost"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.local.kubernetes_namespace.ingress_nginx"
          ]
        }
      ]
    }
  ]
}